# dokukratie

./: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  catalog.in.yml  catalog.json  config.yml.tmpl  docker-compose.yml  requirements-dev.txt  setup.cfg  setup.py  workflow.yml.tmpl
.github/: dependabot.yml
.github/workflows/: bb.yml  be.yml  build.yml  bw.yml  by.yml  dip.yml  hb.yml  he.yml  hh.yml  mv.yml  ni.yml  nw.yml  parlamentsspiegel.yml  rp.yml  sehrgutachten.yml  sh.yml  sl.yml  sn.yml  st.yml  test_scrapers.yml  th.yml  vsberichte.yml
common/: catalog.py
dokukratie/: bb.yml  be.yml  bw.yml  by.yml  cli.py  de_vsberichte.yml  dip.yml  hb.yml  he.yml  hh.yml  mv.yml  ni.yml  nw.yml  parlamentsspiegel.yml  rp.yml  sehrgutachten.yml  sh.yml  sl.yml  sn.yml  st.yml  th.yml  vsberichte.yml
dokukratie/helpers/: mmmeta.py
dokukratie/operations/: __init__.py  clean.py  initialize.py
dokukratie/parsers/: __init__.py  answerers.py  originators.py
dokukratie/scrapers/: base.py  bw.py  de_vsberichte.py  dip.py  exceptions.py  incremental.py  manage.py  mmmeta.py  operations.py  pagination.py  parldok.py  portala.py  portala.query.bw.json  portala.query.json  sehrgutachten.py  starweb.py  util.py  vsberichte.py
tests/: test_scrapers.py
