[metadata]
name = dokukratie
version = file: VERSION
description = Scraper for German democracy documents
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
author = Simon Wörpel
author_email = simon@investigativedata.org
url = https://github.com/okfde/dokukratie/
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires:
    click==8.1.3
    memorious==2.5.0
    sqlalchemy<2.0
    memorious-extended @ git+https://github.com/simonwoerpel/memorious-extended.git
    mmmeta==0.4.4
    furl==2.1.3
    PyICU==2.10.2
    servicelayer==1.19.0
    zavod @ git+https://github.com/opensanctions/zavod.git@b52a6c4f65fbd5b9edc3303a461f2a4244693bf9


[options.extras_require]
psql =
    psycopg2-binary==2.9.6
dev =
    ipdb
    twine
    coverage
    nose
    moto
    pytest
    pytest-cov
    black
    flake8
    isort
    bump2version


[options.entry_points]
console_scripts =
    dokukratie = dokukratie.cli:cli


[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
